...
                        android:textAllCaps="true"
                        android:textColor="?attr/colorOnSurfaceVariant"
                        android:textAppearance="?attr/textAppearanceLabelLarge"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/result_score_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_1"
                        android:textColor="?attr/colorOnSurface"
                        android:textAppearance="?attr/textAppearanceDisplaySmall"
                        android:textStyle="bold"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_3"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/result_home_button"
                style="@style/Widget.GiveOrTake.Button.Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/size_button"
                android:text="@string/result_home"
                />
...
